Added About Us and Ministries

--- a/_layouts/home_temp.html
+++ b/_layouts/home_temp.html
@@ -6,8 +6,6 @@
 
 <body>
 
-  {% include navbar.html %}
-
   <!-- Page Header -->
   {% if page.background %}
   <header class="masthead header-large" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
@@ -28,6 +26,8 @@
               {% if site.description %}
               <span class="subheading">A group of friends, different origins, one destination - <i>Kadosh</i></span>
               {% endif %}
+              <br /><br />
+              <h2>Under Construction</h2>
             </div>
           </div>
         </div>
