--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,16 @@
             </a>
           </li>
           {% endif %}
+          {% if site.youtube_channel %}
+          <li class="list-inline-item">
+            <a href="https://www.youtube.com/channel/{{ site.youtube_channel }}">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-youtube fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}
           {% if site.twitter_username %}
           <li class="list-inline-item">
             <a href="https://twitter.com/{{ site.twitter_username }}">
