Add Videos; Improve Styling

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,15 +16,15 @@
       {% endif %}
       <div class="overlay"></div>
       <div class="header-image">
-        <div class="mx-auto" style="width: 500px;">
-          <img src="images/kadosh-logo.png" />
+        <div class="mx-auto mt-10" style="width: 300px; margin-top: 80px;text-align:center">
+          <img src="images/kadosh-logo.png" class="img-fluid"/>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="col-lg-8 col-md-10 mx-auto pt-10 pb-10">
             <div class="page-heading">              
-              <h1 class="header-text pt-5 pb-5">Make disciples of all nations...</h1>
+              <h1 class="header-text pt-5 pb-10">Make disciples of all nations...</h1>
               {% if site.description %}
               <span class="subheading">A group of friends, different origins, one destination - <i>Kadosh</i></span>
               {% endif %}
