--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,6 +14,12 @@ body {
   font-size: 1rem;
 }
 
+a {
+  &.link-home {
+    color: $teal;
+  }
+}
+
 .rounded-item {
 	height: 150px;
 	width: 150px;
@@ -77,7 +83,7 @@ p {
 			color: $teal;
 			font-weight: bold;
 		}
-	}	
+	}
 }
 
 
