--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 <hr>
 
 <footer>
-  <div class="container">
+  <div class="container pb-4">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <ul class="list-inline text-center">
@@ -83,3 +83,13 @@
     </div>
   </div>
 </footer>
+{% if page.type == "index" %}
+<div class="navbar bg-secondary fixed-bottom text-end">    
+    <span class="text-end text-light pt-2 pb-2"></span>
+    {% if page.lang == "en" %}
+      <a href="/de" class="btn btn-info" role="button">Deutsche</a>
+    {% else %}
+      <a href="../" class="btn btn-info" role="button">English</a>
+    {% endif %}
+</div>
+{% endif %}
