Fix colors for menu on phone

--- a/assets/main.css
+++ b/assets/main.css
@@ -82,7 +82,7 @@ img::-moz-selection {
 
 #mainNav .navbar-brand {
     font-weight: 800;
-    color: #343a40
+    color: #fff
 }
 
 #mainNav .navbar-toggler {
@@ -90,7 +90,7 @@ img::-moz-selection {
     font-weight: 800;
     padding: 13px;
     text-transform: uppercase;
-    color: #343a40
+    color: #fff
 }
 
 #mainNav .navbar-nav>li.nav-item>a {
