--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,11 @@
   <div class="container">
     <a class="navbar-brand" href="{{"/" | relative_url }}"><img src="/images/kadosh-logo_small.png" height="40"/>&nbsp;{{ site.title | escape }}</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      Menu
+     {% if page.lang == "de" %}
+         Menü
+     {% else %}
+          Menu
+     {% endif %}
       <i class="fa fa-bars"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
